# Cyborgeddon

./: .gitignore  CMakeLists.txt  Makefile  README.md  ciudad.fbx  cyborgeddon  tartTime = bulletClock  vcs.xml
Engine/: CameraNode.hpp  Engine.hpp  GameNode.hpp  ObjectNode.hpp
Engine/EngineInterface/: Engine.hpp
Engine/EngineInterface/NodeInterface/: ObjectNode.hpp
Engine/IrrlichtEngine/: InputEventReceiver.hpp  IrrlichtEngine.hpp
Engine/IrrlichtEngine/Node/: IrrlichtGameNode.cpp  IrrlichtGameNode.hpp
Engine/SunlightEngine/: SunlightEngine.hpp
Engine/util/: Color.hpp  KeyCodes.hpp  Keyboard.hpp  Line.hpp  Math.hpp  Plane.hpp  Vector2.hpp  Vector3.hpp
SunlightEngine/: CameraNode.hpp  Color.hpp  Device.hpp  EventReceiver.hpp  Exception.hpp  GenericNode.hpp  KeyCodes.hpp  Math.hpp  SceneNode.hpp  Vector2.hpp  Vector3.hpp
Texturas FBX/: ciudad.fbx
img/: content.txt
lib/: Makefile  libopencv_core.so.2.4.13  libopencv_highgui.so.2.4.13
music/: content.txt
music/Shot/: Shot.aup  Shot.csd
resources/models/: mapa_pruebas.dae
resources/models/Angel/Attack/: ArcangelAttack_000039.mtl
resources/models/Angel/Death/: ArcangelDeath_000144.mtl
resources/models/Angel/Static/: 0.mtl  ArcangelStatic_000084.mtl
resources/models/Angel/Walking/: ArcangelWalking_000040.mtl
resources/models/Arc/: Arcangel-ZY.mtl
resources/models/Bot/: bot.fbx
resources/models/Bot/Attack/: botAttack_000007.mtl
resources/models/Bot/Death/: botDeath_000026.mtl
resources/models/Bot/Static/: botStatic_000001.mtl
resources/models/Bot/Walking/: botWalking_000081.mtl
resources/models/Ciudad/: ciudad.fbx  ciudad.mtl  colisionesColor.mtl
resources/models/Ciudad/Texturas FBX/: ciudad.mtl
resources/models/Cubo/: cubo.fbx  cubo2.fbx  cuboPrueba.fbx
resources/models/Demon/Death/: DemonioDeath_000105.mtl
resources/models/Demon/Jump/: DemonioJump_000004.mtl
resources/models/Demon/Static/: 0.mtl
resources/models/Demon/Walking/: DemonioWalking_000062.mtl
resources/models/Dex/Dash/: DexDash_000048.mtl
resources/models/Dex/Death/: DexDeath_000029.mtl
resources/models/Dex/Static/: DexStatic_000054.mtl
resources/models/Dex/StaticAttack/: DexStaticAttack_000004.mtl
resources/models/Dex/Walking/: DexWalking_000060.mtl
resources/models/Dex/WalkingAttack/: DexWalkingAttack_000046.mtl
resources/models/DexMala/Dash/: DexDash_000052.mtl
resources/models/DexMala/Death/: DexDeath_000134.mtl
resources/models/DexMala/Static/: DexStatic_000012.mtl
resources/models/DexMala/StaticAttack/: DexStaticAttack_000030.mtl
resources/sounds/banks/: Master.bank  Master.strings.bank
src/: Makefile  gilardo.cpp  gilardo.h  main.cpp  main.hpp
src/Engine/EngineInterface/: Engine.hpp  IEngine.hpp
src/Engine/IrrlichtEngine/: InputEventReceiver.cpp  InputEventReceiver.hpp  IrrlichtEngine.cpp  IrrlichtEngine.hpp
src/Engine/SunlightEngine/: SunlightEngine.cpp  SunlightEngine.hpp
src/Engine/util/: Color.hpp  Enum.hpp  Error.hpp  ErrorModelLoading.hpp  Line.hpp  Math.hpp  MathIntersection.hpp  Mouse.hpp  Plane.hpp  System.hpp  Texture.hpp  Timer.cpp  Timer.hpp  Vector3.hpp  WindowParameters.hpp
src/cmp/: AI.cpp  AI.hpp  Alive.hpp  BackgroundMusic.cpp  BackgroundMusic.hpp  BoundingBox.cpp  BoundingBox.hpp  BulletData.cpp  BulletData.hpp  Camera.hpp  CharacterData.cpp  CharacterData.hpp  CircleBounding.cpp  CircleBounding.hpp  Component.cpp  Component.hpp  ComponentPool.cpp  ComponentPool.hpp  ComponentVariant.hpp  Components.hpp  Graph.cpp  Graph.hpp  Jump.cpp  Jump.hpp  Lock.cpp  Lock.hpp  MenuOption.cpp  MenuOption.hpp  Physics.cpp  Physics.hpp  Render.cpp  Render.hpp  Renderable.hpp  RigidMovSphere.cpp  RigidMovSphere.hpp  RigidStaticAABB.cpp  RigidStaticAABB.hpp  Storage.cpp  Storage.hpp  TextureCmp.cpp  (+19 more)
src/ent/: Entities.hpp  Entity.cpp  Entity.hpp  EntityBullet.hpp  EntityCamera.hpp  EntityDoor.hpp  EntityEnemy.hpp  EntityFloor.hpp  EntityKey.hpp  EntityMap.hpp  EntityPlayer.hpp  EntityWall.hpp  Graph.cpp  Graph.hpp  content.txt  gilardo.cpp
src/man/: EngineManager.cpp  EngineManager.hpp  EntityManager.cpp  EntityManager.hpp  GameManager.cpp  GameManager.hpp  TextureManager.cpp  TextureManager.hpp  content.txt
src/sys/: AI_System.cpp  AI_System.hpp  ActionSystem.cpp  ActionSystem.hpp  AttackSystem.cpp  AttackSystem.hpp  BulletDataSystem.cpp  BulletDataSystem.hpp  BulletSystem.cpp  BulletSystem.hpp  CharacterDataSystem.cpp  CharacterDataSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  CooldownSystem.cpp  CooldownSystem.hpp  DeathSystem.cpp  DeathSystem.hpp  GUISystem.cpp  GUISystem.hpp  HUDingameSystem.cpp  HUDingameSystem.hpp  HUDintroSystem.cpp  HUDintroSystem.hpp  HUDpauseSystem.cpp  HUDpauseSystem.hpp  HUDtutorialSystem.cpp  HUDtutorialSystem.hpp  HighSpeedCollisionSystem.cpp  HighSpeedCollisionSystem.hpp  InputSystem.cpp  InputSystem.hpp  IntroInputSystem.cpp  IntroInputSystem.hpp  ModeSystem.cpp  ModeSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  Path_System.cpp  Path_System.hpp  (+25 more)
src/util/: Alias.hpp  Color.hpp  ComponentConstants.hpp  ComponentType.hpp  Constants.hpp  Enum.hpp  EventReceiver.hpp  GameConstants.hpp  GameContext.hpp  HUDPaths.hpp  Keyboard.hpp  Math.hpp  MeshPaths.hpp  Message.hpp  Mouse.hpp  Pathfinding.cpp  Pathfinding.hpp  SoundParameter.hpp  SoundPaths.hpp  State.cpp  State.hpp  SystemConstants.hpp  TexturePaths.hpp  Vector2.hpp  Vector3.hpp
(+97 files in other folders)
